# Spec-Tagger

./: .gitignore  README.md  pyproject.toml  report.json  requirements.txt
features/: crawling_through_files.feature  md_file.md  report_generation.feature  test_crawling.feature  test_running.feature  test_running.md  txt_file.txt
features/nested/: nested_crawl.feature
spec-tagger/: main.py
spec_tagger/: language_patterns.py  main.py  report_generation.py  spec_test_crawler.py  spec_test_linker.py  test_runner.py
spec_tagger/templates/: index.html  script.js  style.css
test_data/spec/: example_spec.feature  example_spec_2.md
test_data/tests/: example_test.py
tests/: crawler_test.py  example_test.py  separate_test.py
