[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-tagger"
version = "0.0.1"
description = "Tag-based spec-to-test traceability and test runner"
requires-python = ">=3.9"

[project.scripts]
spectagger = "spec_tagger.main:main"

[tool.setuptools.packages.find]
include = ["spec_tagger*"]

[tool.pytest.ini_options]
testpaths = ["tests"]